# GWmodel

./: .gitlab-ci.yml
GWmodel/: DESCRIPTION  configure  configure.ac
GWmodel/R/: RcppExports.R  gwr.basic.r
GWmodel/src/: GWmodel.cpp  Makevars.in  RcppExports.cpp  init.c
GWmodel/src/GWmodelCUDA/: CGWmodelCUDA.cpp  CGWmodelCUDA.h  CMakeLists.txt  GWmodelKernel.cu  GWmodelKernel.h  IGWmodelCUDA.cpp  IGWmodelCUDA.h  preview.cpp  preview.h
GWmodel/src/GWmodelCUDA/test/: CMakeLists.txt  test.cpp  zillow.cpp  zillow.h
